# Password-Manager-Python

./: PasswordManager.py  README.md  pyproject.toml
PasswordManager/: pyproject.toml
PasswordManager/password_manager/: main.py
PasswordManager/password_manager_sav.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
