[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sav-password-manager"
version = "0.1.0"
description = "Python password manager"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  { name = "Sav-ita" }
]

dependencies = []

[project.urls]
Homepage = "https://github.com/Sav-ita/Password-Manager-Python"

[project.scripts]
password-manager = "main:main"
