[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "password-manager-sav"
version = "1.0.0"
description = "Local encrypted password manager"
readme = "README.md"
dependencies = [
    "customtkinter",
    "cryptography",
    "pyperclip"
]

[project.scripts]
password-manager = "password_manager:main"
